<resources>
    <string name="app_name">GymApp</string>
    <string name="action_settings">Settings</string>
    <string name="kapcsolat">Kapcsolat</string>
    <string name="r_lunk">Rólunk</string>
    <string name="bel_p_s">Belépés</string>
    <string name="edz_sterv">Edzésterv</string>
    <string name="jegyek">Jegyek</string>
    <string name="profil">Profil</string>
    <string name="bejelentkez_s">Bejelentkezés</string>
    <string name="e_mail">E-mail</string>
    <string name="jelsz">Jelszó</string>
    <string name="m_g_nem_regisztr_ltam">Még nem regisztráltam</string>
    <string name="regisztr_lok">Regisztrálok</string>
    <string name="n_v">Név</string>
    <string name="nev_beall">Név:</string>
    <string name="regiszt">Regisztráció</string>
    <string name="jh">kaka</string>
    <string name="uj_kep">ÚJ KÉP FELTÖLTÉSE</string>
    <string name="eletkor">Életkor:</string>
    <string name="magassag">Magasság:</string>
    <string name="tomeg">Tömeg:</string>
    <string name="szuletesi_datum">Születési dátum:</string>
    <string name="facebook_app_id">349790692535278</string>
    <string name="fb_login_protocol_scheme">fb349790692535278</string>
    <string name="beallitasok">Beállítások</string>
    <string name="title_activity_settings">Settings</string>
    <string name="profil_szerkeszt_se">Profil szerkesztése</string>
    <string name="logout">Kijelentkezés</string>
    <string name="title_activity_tikets">Tikets</string>
    <string name="title_activity_contacts">Kapcsolat</string>
    <string name="title_activity_gecifasz">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="nincs_rv_nyes_jegyed">Nincs érvényes jegyed!</string>
    <string name="onlogout">Bejelentkezve %1$s néven. Biztosan kilépsz?</string>
    <string name="ok">Igen</string>
    <string name="cancel">Mégse</string>
    <string name="trains">Edzések</string>
    <string name="next_today"><![CDATA[Tovább a mai napra >>>]]></string>
    <string name="tickets">Jegyek</string>
    <string name="napl_ment_se">Napló mentése</string>
    <string name="napl_friss_t_se">Napló frissítése</string>
    <string name="gall_ria">Galéria</string>
    <string name="rintse_a_k_sz_l_ket_a_termin_lhoz">Érintse a készüléket a terminálhoz!</string>
    <string name="elhasznaltadazosszeset">Sikeres belépés! Elhasználtad az összes lehetőséget!</string>
    <string name="sikeresbelepes">Sikeres belépés!</string>
    <string name="megennyilehetoseg">Sikeres belépés! Még %1$s belépési lehetőséged van</string>
    <string name="sikertelen">Sikertelen! Nincs több lehetőséged!</string>
    <string name="rendben">Rendben</string>
    <string name="id_tartama_percben">Időtartama percben</string>
    <string name="el_getett_kal_ria">Elégetett Kalória</string>
    <string name="t_pusa">Típusa</string>
    <string name="m_gsem">Mégsem</string>
    <string name="ment_s">Mentés</string>
    <string name="a_folytat_shoz_be_kell_jelentkezni">A folytatáshoz be kell jelentkezni!</string>
    <string name="vegyel_jegyet_most">Nincs érvényes jegyed. Vegyél most!</string>
    <string name="jegyvasarlas">Jegyvásárlás</string>
</resources>
