<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/EtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/EtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jelsz"/>

    </android.support.design.widget.TextInputLayout>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bejelentkez_s"
            android:layout_margin="10dp"
            android:onClick="SignIn"/>

    <com.facebook.login.widget.LoginButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:cropToPadding="true"
            android:id="@+id/buttonFacebookLogin"/>

    <ImageButton android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_margin="10dp"
                 android:src="@drawable/google"
                 android:onClick="gooUp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/signup"
              android:text="@string/m_g_nem_regisztr_ltam"
              android:textColor="@android:color/holo_red_dark"
              android:layout_gravity="center"
              android:textSize="15sp"
              android:linksClickable="true"
              android:onClick="ToSignUp"/>


</LinearLayout>
