<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/RegName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/n_v"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/RegEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/RegPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/jelsz"/>

    </android.support.design.widget.TextInputLayout>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/regisztr_lok"
            android:layout_margin="10dp"
            android:onClick="SignUp"/>

    <ImageButton android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_margin="10dp"
                 android:src="@drawable/face"
                 android:cropToPadding="true"/>

    <ImageButton android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_margin="10dp"
                 android:src="@drawable/google"/>

</LinearLayout>
