<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SettingsActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageButton
                android:id="@+id/picture_settings"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                android:scaleType="fitCenter"
                android:padding="0dp"
                android:onClick="uploadNewPicture"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginRight="25dp"
                android:layout_gravity="center"
                android:onClick="rotatePicture"
                android:src="@android:drawable/ic_menu_rotate"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uj_kep"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:onClick="uploadNewPicture"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
                android:id="@+id/name_settings"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/nev_beall"/>

        <EditText
                android:id="@+id/et_name_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="Sándorka"/>
        <ImageButton
                android:layout_width="100dp"
                android:layout_height="20dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
                android:id="@+id/age_settings"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/eletkor"/>

        <EditText
                android:id="@+id/et_age_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="number"
                tools:text="42343"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
                android:id="@+id/height_settings"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/magassag"/>

        <EditText
                android:id="@+id/et_height_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textSize="16sp"
                android:inputType="number"
                tools:text="187 cm"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
                android:id="@+id/weight_settings"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/tomeg"/>

        <EditText
                android:id="@+id/et_weight_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textSize="16sp"
                android:inputType="number"
                tools:text="562 kg"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
                android:id="@+id/birth_settings"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/szuletesi_datum"/>

        <TextView android:id="@+id/et_birth_settings"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:onClick="DateClick"/>

    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_gravity="center">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_gsem"
                android:layout_margin="10dp"
                android:onClick="Cancel"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ment_s"
                android:layout_margin="10dp"
                android:onClick="Save"/>
    </LinearLayout>

</LinearLayout>