<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageButton
                android:id="@+id/picture_profil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/csecsii"/>
        <TextView
                android:id="@+id/et_name_profil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                tools:text="Sándorka"/>

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_margin="10dp">

        <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="Még 4 alkalmad maradt"
                android:background="@android:color/holo_blue_bright"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView
                android:id="@+id/age_profil"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/eletkor"/>

        <TextView
                android:id="@+id/et_age_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="42343"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView
                android:id="@+id/height_profil"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/magassag"/>

        <TextView
                android:id="@+id/et_height_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textSize="16sp"
                tools:text="187 cm"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView
                android:id="@+id/weight_profil"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/tomeg"/>

        <TextView
                android:id="@+id/et_weight_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textSize="16sp"
                tools:text="562 kg"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView
                android:id="@+id/birth_profil"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/szuletesi_datum"/>

        <TextView
                android:id="@+id/et_birth_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textSize="16sp"
                tools:text="1827.12.01"/>
    </LinearLayout>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil_szerkeszt_se"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="toSettings"/>

</LinearLayout>